complete part 2 of tutorial

--- a/web-app/backbone/part1/index.html
+++ b/web-app/backbone/part1/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Backbone Cellar</title>
+<title>Backbone Users</title>
 <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
 
-<div id="header"><span class="title">Backbone Cellar</span></div>
+<div id="header"><span class="title">Backbone Users</span></div>
 
 <div id="sidebar"></div>
 
 <div id="content">
-<h2>Welcome to Backbone Cellar</h2>
+<h2>Welcome to Backbone Users</h2>
 <p>
 This is a sample application part of of three-part tutorial showing how to build a CRUD application with Backbone.js.
 </p>
