--- a/web-app/backbone/part2/index.html
+++ b/web-app/backbone/part2/index.html
@@ -21,38 +21,30 @@ This is a sample application part of of three-part tutorial showing how to build
 <!-- Templates -->
 <script type="text/template" id="tpl-header">
     <span class="title">Backbone Cellar</span>
-	<button class="new">New Wine</button>
+	<button class="new">New User</button>
 </script>
 
-<script type="text/template" id="tpl-wine-list-item">
-	<a href='#wines/<%= id %>'><%= name %></a>
+<script type="text/template" id="tpl-user-list-item">
+	<a href='#users/<%= id %>'><%= email %></a>
 </script>
 
-<script type="text/template" id="tpl-wine-details">
+<script type="text/template" id="tpl-user-details">
 
     <div class="form-left-col">
         <label>Id:</label>
-        <input type="text" id="wineId" name="id" value="<%= id %>" disabled />
-        <label>Name:</label>
-        <input type="text" id="name" name="name" value="<%= name %>" required/>
-        <label>Grapes:</label>
-        <input type="text" id="grapes" name="grapes" value="<%= grapes %>"/>
-        <label>Country:</label>
-        <input type="text" id="country" name="country" value="<%= country %>"/>
-        <label>Region:</label>
-        <input type="text" id="region" name="region"  value="<%= region %>"/>
-        <label>Year:</label>
-        <input type="text" id="year" name="year"  value="<%= year %>"/>
+        <input type="text" id="userId" name="id" value="<%= id %>" disabled />
+        <label>Email:</label>
+        <input type="text" id="email" name="email" value="<%= email %>" required/>
+        <label>User name:</label>
+        <input type="text" id="userName" name="userName" value="<%= userName %>" required/>
+        <label>First name:</label>
+        <input type="text" id="firstName" name="firstName" value="<%= firstName %>" />
+        <label>Last name:</label>
+        <input type="text" id="lastName" name="lastName" value="<%= lastName %>" />
+
         <button class="save">Save</button>
         <button class="delete">Delete</button>
     </div>
-
-    <div class="form-right-col">
-        <img height="300" src="../pics/<%= picture %>"/>
-        <label>Notes:</label>
-        <textarea id="description" name="description"><%= description %></textarea>
-    </div>
-
 </script>
 
 <!-- JavaScript -->
